# pluck-app

./: .gitignore  CHANGELOG.md  README.md  pluks-extension.xpi
.claude/: launch.json
.claude/skills/analytics-truth-audit/: SKILL.md
.github/actions/setup-windows-rust/: action.yml
.github/scripts/: history_query.py
.github/workflows/: daily-analytics.yml  release.yml  tests.yml  website.yml  windows-smoke.yml
app/: .env.example  .env.production  .npmrc  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: ActivationTour.test.tsx  ActivationTour.tsx  App.test.tsx  App.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  NudgeView.tsx  PasteConfirmPill.tsx  PreferencesScreen.test.tsx  PreferencesScreen.tsx  RadialMenu.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  analytics.test.ts  analytics.ts  detectors.test.ts  detectors.ts  index.css  main.tsx  nudges.test.ts  nudges.ts  updater.test.ts  updater.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.smoke.conf.json
app/src-tauri/capabilities/: default.json  overlay.json
app/src-tauri/icons/: icon.icns
app/src-tauri/macos/: Info.plist
app/src-tauri/src/: history.rs  lib.rs  main.rs  paste.rs  selection.rs  settings.rs
app/src/__tests__/: setup.ts
extension/: analytics.js  background.js  config.js  content.js  make_icons.sh  manifest.json  package-lock.json  package.json  playwright.config.ts  popup.html  popup.js
extension/store-assets/: screenshot-src.html
extension/tests/: content-script.spec.ts  fixtures.ts  iframe-content.html  iframe-no-clipboard.html  popup.spec.ts  test-page.html
scripts/: analytics-digest.mjs  gen-dmg-background.mjs  leads-apps-script.gs  package-lock.json  package.json  setup-signing.sh
tests/: RELEASE_REGRESSION_TESTS.md
website/: CNAME  analytics.js  demo.js  feedback.js  index.html  package-lock.json  package.json  playwright.config.ts  privacy.html  serve.mjs  stats.js  style.css
website/tests/: comparison.spec.ts  demo.spec.ts  download-arch.spec.ts  download-modal.spec.ts  download-windows.spec.ts  feedback.spec.ts  helpers.ts  render.spec.ts
