[package]
name = "pluck"
version = "0.1.0"
description = "Select text — it's already copied."
authors = ["Pluck"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
arboard = "3"
enigo = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
