[package]
name = "pluck"
version = "0.2.6"
description = "Select text — it's already copied."
authors = ["Pluck"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[target.'cfg(not(target_os = "macos"))'.dependencies]
enigo = "0.2"
# Global input listener for selection detection on Windows & Linux.
# (macOS uses a native CGEventTap — see selection::mac_tap.)
rdev = "0.5"
